<resources>
    <string name="app_name">Radyo Dinle Firma Rehberim</string>
    <string name="empty_cities_text">No cities found</string>
    <string name="no_internet_connection_text">No Internet Connection</string>
    <string name="no_internet_connection_toast_message">Please make sure you are connected to the internet</string>
    <string name="empty_categories_text">No categories found</string>
    <string name="empty_radios_text">No radios found</string>
    <string name="cannot_stream_radio_text">Radio stream could not be resolved</string>
    <string name="all_the_radios_tab_title">Radios</string>
    <string name="favourite_radios_tab_title">Favourites</string>
    <string name="menu_item_text_share">Share</string>
    <string name="menu_item_text_add_to_fav">Add To Favourites</string>
    <string name="search_hint_text">Search for radios</string>
    <string name="city_spinner_default_value_text">All Cities</string>
    <string name="category_spinner_default_value_text">All Categories</string>
    <string name="notifications">Notifications</string>
    <string name="timer">Timer</string>
    <string name="firma_rehberim">Firma Rehberim</string>
    <string name="add_your_company">Add your company</string>
    <string name="radios">Radios</string>
    <string name="add_your_radio">Add your radio</string>
    <string name="contact">Contact</string>
    <string name="search" translatable="false">Search</string>
    <string name="radyo" translatable="false">Radyo</string>
    <string name="tv" translatable="false">TV</string>
    <string name="rehber" translatable="false">Rehber</string>
    <string name="gazete" translatable="false">Gazete</string>
    <string name="favori" translatable="false">Favori</string>
    <string name="t_r" translatable="false">Tür</string>
    <string name="yerel" translatable="false">Yerel</string>
    <string name="ulusal" translatable="false">Ulusal</string>
    <string name="radyo_ne_zaman_kapans_n">Radyo ne zaman kapansın?</string>
    <string name="tamam">TAMAM</string>
    <string name="radyonun_kapanmas_na">Radyonun kapanmasına</string>
    <string name="ptal_et">İptal et</string>
    <string name="arayan_firma_numaras_tespitini_aktifle_tir">Arayan firma numarası tespitini aktifleştir</string>
    <string name="arayan_firma_numaras_tespitini_devre_d_b_rak">Arayan firma numarası tespitini devre dışı bırak</string>
    <string name="gizlilik_s_zle_mesi">Gizlilik Sözleşmesi</string>
    <string name="hakkinda">Hakkinda</string>
    <string name="arama_kayd_bulunamad">Arama kaydı bulunamadı.</string>
    <string name="parola">Parola</string>
    <string name="e_posta_veya_telefon_numaras">E-posta veya telefon numarası</string>
    <string name="g_r_yap">Giriş Yap</string>
    <string name="firma_rehberim_radyo">Firma\nRehberim\nRadyo</string>
    <string name="giris_yapmadan_devam_et">Giriş yapmadan devam et</string>
    <string name="arayan_firma_tespiti">Arama tespiti</string>
    <string name="arayan_firma_tespiti_call_logs">Arama Tespiti</string>
    <string name="giri">Giriş yap</string>
    <string name="arayan_firma_listesini_g_ster">Arama Listesi</string>
    <string name="hesab_n_yok_mu_hesap_olu_tur">Hesabın yok mu? Hesap oluştur</string>
    <string name="hesab_n_var_m_giri_yap">Hesabın var mı? Giriş yap</string>
    <string name="hesap_olu_tur">Hesap Oluştur</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_loading_radios">Loading Radios...</string>
</resources>