<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:background="@drawable/authentication_fields_backgorund"
        android:fontFamily="@font/righteous_regular"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        android:text="@string/hesap_olu_tur"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:inputType="text"
            android:background="@drawable/authentication_fields_backgorund"
            android:fontFamily="@font/righteous_regular"
            android:hint="@string/e_posta_veya_telefon_numaras"
            android:textColorHint="@color/authentication_fields_hint_text_color"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:background="@drawable/authentication_fields_backgorund"
            android:fontFamily="@font/righteous_regular"
            android:hint="@string/parola"
            android:textColorHint="@color/authentication_fields_hint_text_color"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_launch_sign_in_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:fontFamily="@font/righteous_regular"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/hesab_n_var_m_giri_yap"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_creating_account"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_above="@id/btn_create_account"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:theme="@style/AppTheme.WhiteAccent"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
        android:background="@drawable/authentication_fields_backgorund"
        android:fontFamily="@font/righteous_regular"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:text="@string/hesap_olu_tur"/>
</RelativeLayout>